SignUp y LoginUp Funcionando
Validacion del LocalStorage y SessionStorage para el registro del usuario OK funcionando

--- a/login/login.html
+++ b/login/login.html
@@ -73,7 +73,9 @@
                 <input type="password" id="password" name="password" class="form-control" required>
             </div>
             <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-            <a href="../login/login.html" id="logoutBtn" class="nav-link">Cerrar Sesión</a>
+            <a href="registrate.html" id="registerBtn" class="nav-link">Registrate</a>
+            
+            <!-- <a href="../login/login.html" id="logoutBtn" class="nav-link">Cerrar Sesión</a> -->
 
         </form>
     </div>
