--- a/login/registrate.html
+++ b/login/registrate.html
@@ -66,7 +66,7 @@
         <h1>REGISTRATE</h1>
     </div>
     <div class="container mt-5 mb-5">
-        <form action="#" method="post" onsubmit="signUp()">
+        <form action="#" method="post" id="registerForm">
             <div class="row">
                 <div class="col-md-6">
                     <div class="mb-1">
