Modificaciones  Close Session

--- a/login/registrate.html
+++ b/login/registrate.html
@@ -37,15 +37,16 @@
                 </form>
                 <div class="nav-icons d-none d-lg-flex">
                     <a href="#" class="nav-link"><i class="fas fa-shopping-cart"></i></a>
-                    <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#userModal"><i
-                            class="fas fa-user"></i></a>
+                    <!-- <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#userModal"><i class="fas fa-user"></i></a> -->
+                    <a href="login.html" class="nav-link"><i class="fas fa-user"></i>  Iniciar Sesion</a>
+
                 </div>
             </div>
         </div>
     </nav>
 
     <!-- Modal -->
-    <div class="modal fade modal-right" id="userModal" tabindex="-1" aria-labelledby="userModalLabel"
+    <!-- <div class="modal fade modal-right" id="userModal" tabindex="-1" aria-labelledby="userModalLabel"
         aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -53,14 +54,14 @@
                     <h5 class="modal-title" id="userModalLabel">Cuenta de Usuario</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body"> -->
                     <!-- Enlace para cerrar sesión -->
-                    <a href="#" class="btn btn-custom-login btn-block mb-2 logout-btn">Iniciar Sesion</a>
+                    <!-- <a href="#" class="btn btn-custom-login btn-block mb-2 logout-btn">Iniciar Sesion</a>
                     <a href="#" class="btn btn-custom-login btn-block mb-2 logout-btn">Cerrar Sesión</a>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="banner">
         <h1>REGISTRATE</h1>
