--- a/login/registrate.html
+++ b/login/registrate.html
@@ -197,7 +197,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="login.js"></script>
     <!-- <script src="registrate.js"></script> -->
-    <script src="../session.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
