--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
-    <script src="session.js"></script>
+    <script src="script.js"></script>
 
 
 </body>
