Add Msg Welcome Index

--- a/index.html
+++ b/index.html
@@ -39,26 +39,9 @@
             </div>
         </div>
     </nav>
-
-  <!-- Modal -->
-  <!--<div class="modal fade modal-right" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="userModalLabel">Cuenta de Usuario</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">-->
-                <!-- Enlace para cerrar sesión -->
-            <!--    <a href="wwww.google.com" class="btn btn-custom-login btn-block mb-2 logout-btn">Iniciar Sesion</a>
-                <a href="login/login.html" class="btn btn-custom-login btn-block mb-2 logout-btn">Registrate</a>
-            </div>
-        </div>
-    </div>
-</div>-->
-
     <div class="banner">
         <h1>LESS!</h1>
+        <h3 id="mensaje" style="display: none;"></h3>
     </div>
 
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
