--- a/categorias/hombre.html
+++ b/categorias/hombre.html
@@ -13,8 +13,14 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">LESS!</a>
-        <div class="nav-icons d-flex d-lg-none">
-            <a href="#" class="nav-link"><i class="fas fa-shopping-cart"></i></a>
+        <div class="nav-icons d-flex d-lg-none header-cart">
+            <a href="#" class="nav-link">
+                <i class="fas fa-shopping-cart"></i>
+                <span id="cart-counter-mobile" class="badge bg-danger">0</span>
+            </a>
+            <div class="cart-content-wraper" id="cart-content-wraper-mobile">
+                <!-- Dynamic cart content here -->
+            </div>
             <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#userModal"><i class="fas fa-user"></i></a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,8 +36,14 @@
                 <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
                 <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i></button>
             </form>
-            <div class="nav-icons d-none d-lg-flex">
-                <a href="#" class="nav-link"><i class="fas fa-shopping-cart"></i></a>
+            <div class="nav-icons d-none d-lg-flex header-cart">
+                <a href="#" class="nav-link">
+                    <i class="fas fa-shopping-cart"></i>
+                    <span id="cart-counter" class="badge bg-danger">0</span>
+                </a>
+                <div class="cart-content-wraper" id="cart-content-wraper">
+                    <!-- Dynamic cart content here -->
+                </div>
                 <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#userModal"><i class="fas fa-user"></i></a>
             </div>
         </div>
@@ -39,111 +51,81 @@
 </nav>
 
 <!-- Modal -->
-<div class="modal fade modal-right" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
-<div class="modal-dialog">
-    <div class="modal-content">
-        <div class="modal-header">
-            <h5 class="modal-title" id="userModalLabel">Cuenta de Usuario</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <!-- Enlace para cerrar sesión -->
-            <a href="#" class="btn btn-custom-login btn-block mb-2 logout-btn">Iniciar Sesion</a>
-            <a href="#" class="btn btn-custom-login btn-block mb-2 logout-btn">Cerrar Sesión</a>
+<!-- <div class="modal fade modal-right" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="userModalLabel">Cuenta de Usuario</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body"> -->
+                <!-- Enlace para cerrar sesión -->
+                <!-- <a href="#" class="btn btn-custom-login btn-block mb-2 logout-btn">Iniciar Sesion</a>
+                <a href="#" class="btn btn-custom-login btn-block mb-2 logout-btn">Cerrar Sesión</a>
+            </div>
         </div>
     </div>
+</div> -->
+      
+<div class="banner">
+    <h1>HOMBRE</h1>
 </div>
-</div>
-     
-    <div class="banner">
-        <h1>HOMBRE</h1>
-    </div>
 
-    <h1 class="title">T-Shirts destacadas</h1>
-    <div class="flex-container">
-      <div class="cards">
-        <img src="../assets/img/Camiseta1.jpg" class="card-img-top" alt="Camiseta">
-        <div class="cards-body">
-          <h5 class="cards-title">Camiseta Azul</h5>
-          <p class="cards-text">$20</p>
-          <a href="producto.html" class="button button-primary">Comprar</a>
-        </div>
-      </div>
-      <div class="cards">
-        <img src="../assets/img/Buzo1.jpg" class="card-img-top" alt="Camiseta">
-        <div class="cards-body">
-          <h5 class="cards-title">Saco Azul</h5>
-          <p class="cards-text">$25</p>
-          <a href="#" class="button button-primary">Comprar</a>
-        </div>
-      </div>
-      <div class="cards">
-        <img src="../assets/img/Buzo2.jpg" class="card-img-top" alt="Camiseta">
-        <div class="cards-body">
-          <h5 class="cards-title">Buzo Negro</h5>
-          <p class="cards-text">$25</p>
-          <a href="#" class="button button-primary">Comprar</a>
-        </div>
-      </div>
+<h1 class="title">T-Shirts destacadas</h1>
+<div class="flex-container">
+  <div class="cards">
+    <img src="../assets/img/Camiseta1.jpg" class="card-img-top" alt="Camiseta">
+    <div class="cards-body">
+      <h5 class="cards-title">Camiseta Azul</h5>
+      <p class="cards-text">$20</p>
+      <a href="#" class="button button-primary comprar-btn">Comprar</a>
     </div>
   </div>
-
-  <div class="flex-container">
-    <div class="cards">
-      <img src="../assets/img/Bermuda1.jpg" class="card-img-top" alt="Camiseta">
-      <div class="cards-body">
-        <h5 class="cards-title">Camiseta Flores</h5>
-        <p class="cards-text">$20</p>
-        <a href="producto.html" class="button button-primary">Comprar</a>
-      </div>
+  <div class="cards">
+    <img src="../assets/img/Buzo1.jpg" class="card-img-top" alt="Camiseta">
+    <div class="cards-body">
+      <h5 class="cards-title">Saco Azul</h5>
+      <p class="cards-text">$25</p>
+      <a href="#" class="button button-primary comprar-btn">Comprar</a>
     </div>
-    <div class="cards">
-      <img src="../assets/img/Bermuda2.jpg" class="card-img-top" alt="Camiseta">
-      <div class="cards-body">
-        <h5 class="cards-title">Camiseta Rosada</h5>
-        <p class="cards-text">$25</p>
-        <a href="#" class="button button-primary">Comprar</a>
-      </div>
-    </div>
-    <div class="cards">
-      <img src="../assets/img/Chaqueta1.jpg" class="card-img-top" alt="Camiseta">
-      <div class="cards-body">
-        <h5 class="cards-title">Chaqueta Negra</h5>
-        <p class="cards-text">$25</p>
-        <a href="#" class="button button-primary">Comprar</a>
-      </div>
+  </div>
+  <div class="cards">
+    <img src="../assets/img/Buzo2.jpg" class="card-img-top" alt="Camiseta">
+    <div class="cards-body">
+      <h5 class="cards-title">Buzo Negro</h5>
+      <p class="cards-text">$25</p>
+      <a href="#" class="button button-primary comprar-btn">Comprar</a>
     </div>
   </div>
 </div>
 
 <div class="flex-container">
-    <div class="cards">
-      <img src="../assets/img/Camiseta1.jpg" class="card-img-top" alt="Camiseta">
-      <div class="cards-body">
-        <h5 class="cards-title">Camiseta Azul</h5>
-        <p class="cards-text">$20</p>
-        <a href="producto.html" class="button button-primary">Comprar</a>
-      </div>
+  <div class="cards">
+    <img src="../assets/img/Bermuda1.jpg" class="card-img-top" alt="Camiseta">
+    <div class="cards-body">
+      <h5 class="cards-title">Camiseta Flores</h5>
+      <p class="cards-text">$20</p>
+      <a href="#" class="button button-primary comprar-btn">Comprar</a>
     </div>
-    <div class="cards">
-      <img src="../assets/img/Buzo1.jpg" class="card-img-top" alt="Camiseta">
-      <div class="cards-body">
-        <h5 class="cards-title">Saco Azul</h5>
-        <p class="cards-text">$25</p>
-        <a href="#" class="button button-primary">Comprar</a>
-      </div>
+  </div>
+  <div class="cards">
+    <img src="../assets/img/Bermuda2.jpg" class="card-img-top" alt="Camiseta">
+    <div class="cards-body">
+      <h5 class="cards-title">Camiseta Rosada</h5>
+      <p class="cards-text">$25</p>
+      <a href="#" class="button button-primary comprar-btn">Comprar</a>
     </div>
-    <div class="cards">
-      <img src="../assets/img/Buzo2.jpg" class="card-img-top" alt="Camiseta">
-      <div class="cards-body">
-        <h5 class="cards-title">Buzo Negro</h5>
-        <p class="cards-text">$25</p>
-        <a href="#" class="button button-primary">Comprar</a>
-      </div>
+  </div>
+  <div class="cards">
+    <img src="../assets/img/Chaqueta1.jpg" class="card-img-top" alt="Camiseta">
+    <div class="cards-body">
+      <h5 class="cards-title">Chaqueta Negra</h5>
+      <p class="cards-text">$25</p>
+      <a href="#" class="button button-primary comprar-btn">Comprar</a>
     </div>
   </div>
 </div>
-  
+
 <!-- Footer -->
 <footer class="footer">
     <div class="container text-center text-white">
@@ -183,5 +165,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
     <script src="../session.js"></script>
+    <script src="carrito.js"></script>
 </body>
 </html>
