--- a/categorias/hombre.html
+++ b/categorias/hombre.html
@@ -14,12 +14,13 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">LESS!</a>
         <div class="nav-icons d-flex d-lg-none header-cart">
-            <a href="#" class="nav-link">
+            <a href="#" class="nav-link ">
+              <!-- Icono del carrito de compras -->
                 <i class="fas fa-shopping-cart"></i>
                 <span id="cart-counter-mobile" class="badge bg-danger">0</span>
             </a>
             <div class="cart-content-wraper" id="cart-content-wraper-mobile">
-                <!-- Dynamic cart content here -->
+                <!-- Inicio de la Cart Dinamica para el carrito de compras -->
             </div>
             <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#userModal"><i class="fas fa-user"></i></a>
         </div>
@@ -37,16 +38,17 @@
                 <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i></button>
             </form>
             <div class="nav-icons d-none d-lg-flex header-cart">
-                <a href="#" class="nav-link">
+                <a href="#" class="nav-link header-cart">
                     <i class="fas fa-shopping-cart"></i>
                     <span id="cart-counter" class="badge bg-danger">0</span>
                 </a>
                 <div class="cart-content-wraper" id="cart-content-wraper">
-                    <!-- Dynamic cart content here -->
+                    <!-- Card Dinamica para el carrito de compras -->
                 </div>
-                <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#userModal"><i class="fas fa-user"></i></a>
+                
             </div>
         </div>
+        <a href="../login/login.html" class="nav-link" id="loggIn"><i class="fas fa-user"></i> Iniciar Sesion</a>
     </div>
 </nav>
 
