--- a/categorias/hombre.html
+++ b/categorias/hombre.html
@@ -48,7 +48,9 @@
                 
             </div>
         </div>
+        
         <a href="../login/login.html" class="nav-link" id="loggIn"><i class="fas fa-user"></i> Iniciar Sesion</a>
+       <a href="../login/login.html" class="nav-link" style="display: none;" id="logOut"><i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesion</a>
     </div>
 </nav>
 
@@ -166,7 +168,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
-    <script src="../session.js"></script>
+    <script src="../script.js"></script>
     <script src="carrito.js"></script>
 </body>
 </html>
