--- a/categorias/mujer.html
+++ b/categorias/mujer.html
@@ -32,28 +32,29 @@
             </form>
             <div class="nav-icons d-none d-lg-flex">
                 <a href="#" class="nav-link"><i class="fas fa-shopping-cart"></i></a>
-                <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#userModal"><i class="fas fa-user"></i></a>
+                <a href="../login/login.html" class="nav-link" id="loggIn"><i class="fas fa-user"></i> Iniciar Sesion</a>
+                <a href="../login/login.html" class="nav-link" style="display: none;" id="logOut"><i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesion</a>
             </div>
         </div>
     </div>
 </nav>
 
 <!-- Modal -->
-<div class="modal fade modal-right" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
+<!-- <div class="modal fade modal-right" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
 <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="userModalLabel">Cuenta de Usuario</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body">
+        <div class="modal-body">-->
             <!-- Enlace para cerrar sesión -->
-            <a href="#" class="btn btn-custom-login btn-block mb-2 logout-btn">Iniciar Sesion</a>
+            <!--<a href="#" class="btn btn-custom-login btn-block mb-2 logout-btn">Iniciar Sesion</a>
             <a href="#" class="btn btn-custom-login btn-block mb-2 logout-btn">Cerrar Sesión</a>
         </div>
     </div>
 </div>
-</div>
+</div> -->
      
     <div class="banner">
         <h1>MUJER</h1>
@@ -183,6 +184,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
-    <script src="../session.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
