Errores de sessionStorage.removeItem
Correccion de errores de sessinStorage para quitar la seccion de un usuario logueado

--- a/categorias/mujer.html
+++ b/categorias/mujer.html
@@ -50,26 +50,10 @@
         </div>
         
         <a href="../login/login.html" class="nav-link" id="loggIn"><i class="fas fa-user"></i> Iniciar Sesion</a>
-       <a href="../login/login.html" class="nav-link" style="display: none;" id="logOut"><i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesion</a>
+       <a href="#" class="nav-link" style="display: none;" id="logOut"><i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesion</a>
     </div>
 </nav>
 
-<!-- Modal -->
-<!-- <div class="modal fade modal-right" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="userModalLabel">Cuenta de Usuario</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body"> -->
-                <!-- Enlace para cerrar sesión -->
-                <!-- <a href="#" class="btn btn-custom-login btn-block mb-2 logout-btn">Iniciar Sesion</a>
-                <a href="#" class="btn btn-custom-login btn-block mb-2 logout-btn">Cerrar Sesión</a>
-            </div>
-        </div>
-    </div>
-</div> -->
       
 <div class="banner">
     <h1>MUJER</h1>
