--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="#" class="nav-link"><i class="fas fa-shopping-cart"></i></a>
                     <!--<a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#userModal"><i class="fas fa-user"></i></a>-->
                     <a href="login/login.html" class="nav-link" id="loggIn"><i class="fas fa-user"></i> Iniciar Sesion</a>
-                    <a href="login/login.html" class="nav-link" style="display: none;" id="logOut"><i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesion</a>
+                    <a href="#" class="nav-link" style="display: none;" id="logOut"><i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesion</a>
                 </div>
             </div>
         </div>
