--- a/categorias/cart.html
+++ b/categorias/cart.html
@@ -57,7 +57,7 @@
         </div>
         <div id="cart-total" class="mt-4"></div>
         <div class="mt-4">
-            <a href="checkout.html" class="btn btn-primary">Proceder al pago</a>
+            <a href="../formularios/checkout.html" class="btn btn-primary">Proceder al pago</a>
         </div>
     </div>
 
