--- a/categorias/cart.html
+++ b/categorias/cart.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito de Compras</title>
     <link rel="stylesheet" href="cart.css">
+    <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -60,6 +61,8 @@
             <a href="../formularios/checkout.html" class="btn btn-primary">Proceder al pago</a>
         </div>
     </div>
+
+    <br>
 
     <footer class="footer">
         <div class="container text-center text-white">
