--- a/categorias/mujer.html
+++ b/categorias/mujer.html
@@ -38,7 +38,7 @@
                 <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i></button>
             </form>
             <div class="nav-icons d-none d-lg-flex header-cart">
-                <a href="#" class="nav-link header-cart">
+                <a href="cart.html" class="nav-link header-cart">
                     <i class="fas fa-shopping-cart"></i>
                     <span id="cart-counter" class="badge bg-danger">0</span>
                 </a>
