--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
                 </form>
                 <div class="nav-icons d-none d-lg-flex">
                     <a href="#" class="nav-link"><i class="fas fa-shopping-cart"></i></a>
-                    <!--<a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#userModal"><i class="fas fa-user"></i></a>-->
                     <a href="login/login.html" class="nav-link" id="loggIn"><i class="fas fa-user"></i> Iniciar Sesion</a>
                     <a href="#" class="nav-link" style="display: none;" id="logOut"><i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesion</a>
                 </div>
@@ -75,6 +74,16 @@
         <img src="assets/img/banner2.webp" alt="Imagen Inferior">
     </div>
 
+    <!-- NUESTRO EQUIPO -->
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">NUESTRO EQUIPO</h5>
+                <div id="team-info"></div>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container text-center text-white">
@@ -114,9 +123,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
-
+    <script src="team.js"></script>
 
 </body>
 </html>
-
-
