--- a/index.html
+++ b/index.html
@@ -74,18 +74,16 @@
         <img src="assets/img/banner2.webp" alt="Imagen Inferior">
     </div>
 
-    <!-- NUESTRO EQUIPO -->
+    
     <div class="container mt-5">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">NUESTRO EQUIPO</h5>
-                <div id="team-info"></div>
-            </div>
+        <h1 style="text-align: center;">NUESTRO EQUIPO DE TRABAJO</h1>
+        <div class="row" id="team-info">
+            
         </div>
     </div>
 
     <!-- Footer -->
-    <footer class="footer">
+    <br><footer class="footer">
         <div class="container text-center text-white">
             <div class="row">
                 <div class="col-md-4">
