--- a/categorias/cart.html
+++ b/categorias/cart.html
@@ -6,6 +6,7 @@
     <title>Carrito de Compras</title>
     <link rel="stylesheet" href="cart.css">
     <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../categorias/hombre.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -102,6 +103,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
     <script src="cart.js"></script>
+    <script src="carrito.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
 
