--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LESS</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="categorias/hombre.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -31,7 +32,13 @@
                     <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i></button>
                 </form>
                 <div class="nav-icons d-none d-lg-flex">
-                    <a href="#" class="nav-link"><i class="fas fa-shopping-cart"></i></a>
+                    <div class="nav-icons d-none d-lg-flex header-cart">
+                        <a href="categorias/cart.html" class="nav-link header-cart">
+                            <i class="fas fa-shopping-cart"></i>
+                            <span id="cart-counter" class="badge bg-danger">0</span>
+                        </a>
+                        <div class="cart-content-wraper" id="cart-content-wraper"></div>
+                    </div>
                     <a href="login/login.html" class="nav-link" id="loggIn"><i class="fas fa-user"></i> Iniciar Sesion</a>
                     <a href="#" class="nav-link" style="display: none;" id="logOut"><i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesion</a>
                 </div>
@@ -120,8 +127,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+    
+    <script src="categorias/carrito.js"></script>
     <script src="script.js"></script>
     <script src="team.js"></script>
+
 
 </body>
 </html>
