Cambios Finales Guardados

--- a/login/registrate.html
+++ b/login/registrate.html
@@ -161,7 +161,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="login.js"></script>
+    <!-- <script src="login.js"></script> -->
     <!-- <script src="registrate.js"></script> -->
     <script src="../script.js"></script>
 </body>
