--- a/formularios/delivery.html
+++ b/formularios/delivery.html
@@ -45,6 +45,7 @@
                 <div class="card mb-3">
                     <div class="card-body">
                         <div id="shipping-info"></div>
+                        <button id="edit-shipping-info" class="btn btn-primary mt-3">Editar Información de Envío</button>
                     </div>
                 </div>
             </div>
@@ -69,7 +70,7 @@
                             <div class="row mb-3 form-group">
                                 <div class="col-md-6">
                                     <label for="expiry-date" class="form-label">Fecha de expiración</label>
-                                    <input type="text" class="form-control" id="expiry-date" placeholder="MM/YY" required>
+                                    <input type="date" class="form-control" id="expiry-date" placeholder="MM/YY" pattern="(0[1-9]|1[0-2])\/\d{2}" required>
                                 </div>
                                 <div class="col-md-6 form-group">
                                     <label for="cvv" class="form-label">CVV</label>
@@ -119,5 +120,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="delivery.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
