--- a/categorias/cart.html
+++ b/categorias/cart.html
@@ -26,13 +26,13 @@
                     <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
                     <button class="btn btn-outline-success" type="submit"><i class="fas fa-search"></i></button>
                 </form>
-                <div class="nav-icons d-none d-lg-flex header-cart">
+                <!-- <div class="nav-icons d-none d-lg-flex header-cart">
                     <a href="#" class="nav-link header-cart">
                         <i class="fas fa-shopping-cart"></i>
                         <span id="cart-counter" class="badge bg-danger">0</span>
                     </a>
                     <div class="cart-content-wraper" id="cart-content-wraper"></div>
-                </div>
+                </div> -->
             </div>
             <a href="../login/login.html" class="nav-link" id="loggIn"><i class="fas fa-user"></i> Iniciar Sesion</a>
             <a href="#" class="nav-link" style="display: none;" id="logOut"><i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesion</a>
