--- a/formularios/delivery.html
+++ b/formularios/delivery.html
@@ -70,7 +70,7 @@
                             <div class="row mb-3 form-group">
                                 <div class="col-md-6">
                                     <label for="expiry-date" class="form-label">Fecha de expiración</label>
-                                    <input type="date" class="form-control" id="expiry-date" placeholder="MM/YY" pattern="(0[1-9]|1[0-2])\/\d{2}" required>
+                                    <input type="text" class="form-control" id="expiry-date" placeholder="MM/YY" pattern="(0[1-9]|1[0-2])\/\d{2}" required>
                                 </div>
                                 <div class="col-md-6 form-group">
                                     <label for="cvv" class="form-label">CVV</label>
