--- a/login/registrate.html
+++ b/login/registrate.html
@@ -17,8 +17,8 @@
             <a class="navbar-brand" href="../index.html">LESS!</a>
             <div class="nav-icons d-flex d-sm-none">
                 <a href="#" class="nav-link"><i class="fas fa-shopping-cart"></i></a>
-                <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#userModal"><i
-                        class="fas fa-user"></i>Iniciar Sesion</a>
+                <a href="login/login.html" class="nav-link" id="loggIn"><i class="fas fa-user"></i> Iniciar Sesion</a>
+                <a href="#" class="nav-link" style="display: none;" id="logOut"><i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesion</a>
                 <a href="#" class="nav-link">Registrate</a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
